# Volchayobs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test-plan.md  test-report.md
.github/workflows/: build.yml
resources/: app.rc
resources/themes/: blackout.qss  light.qss  rgb.qss
src/: AccentBadge.cpp  AccentBadge.h  AudioLevelMeter.cpp  AudioLevelMeter.h  AudioLevelProbe.cpp  AudioLevelProbe.h  AudioMixerPanel.cpp  AudioMixerPanel.h  Devices.cpp  Devices.h  I18n.cpp  I18n.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  PresetManager.cpp  PresetManager.h  PreviewWidget.cpp  PreviewWidget.h  SettingsDialog.cpp  SettingsDialog.h  Source.cpp  Source.h  SourceConfigDialog.cpp  SourceConfigDialog.h  SourcesPanel.cpp  SourcesPanel.h  StreamEngine.cpp  StreamEngine.h  ThemeManager.cpp  ThemeManager.h  WasapiLoopback.cpp  WasapiLoopback.h  main.cpp
